--- a/style.css
+++ b/style.css
@@ -1183,7 +1183,7 @@ a.futuristic-button-small {
     align-items: center;
     gap: 8px;
     cursor: pointer;
-    font-size: 0.75; 
+    font-size: 0.75rem; 
 }
 }
 
